<resources>
    <string name="app_name">Uploader</string>
    <string name="upload_file">Upload File</string>
    <string name="select_file">Select File</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="contact_no">Contact no</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="add_user">Add User</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">forget password?</string>
    <string name="_1">1</string>
    <string name="user_id">User id</string>
    <string name="someone_email_com">someone@email.com</string>
    <string name="_9100362607">9100362607</string>
    <string name="new_user">new user?</string>
    <string name="existing_user">existing user?</string>
    <string name="_0">0</string>
    <string name="get_files">get files</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="get_user_ids">Get User ids</string>
    <string name="customer_ids">Customer Ids</string>
    <string name="get_uploaded_files">Get Uploaded Files</string>
    <string name="edit_name_contact_no">Edit Name / Contact no</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="current_e_mail">Current E-mail</string>
    <string name="new_e_mail">New E-mail</string>
    <string name="get_user_email_ids">Get User Email Ids</string>
    <string name="send_notification">Send Notification</string>
    <string name="loading">Loading…</string>
    <string name="nic">No Internet Connection</string>
</resources>
