<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:paddingBottom="10sp">

            <RelativeLayout
                android:id="@+id/image_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:background="@drawable/profile_pic_border">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/admin_profile_image"
                    android:layout_width="120sp"
                    android:layout_height="120sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/profile_pic"
                    android:src="@mipmap/default_user" />


            </RelativeLayout>

            <TextView
                android:id="@+id/admin_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/admin_user_settings"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/settings" />

            <ProgressBar
                android:id="@+id/admin_profile_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/idBG"
                android:gravity="center"
                android:padding="5sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/user_id"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/admin_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/uploadsBG"
                android:gravity="center"
                android:padding="5sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Files Uploaded"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/admin-files_uploaded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/_0"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginBottom="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/admin_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="15sp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_no"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/admin_user_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="15sp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/idBG"
                    android:gravity="center"
                    android:padding="5sp">

                    <Button
                        android:id="@+id/admin_select_file"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/select_file"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/uploadsBG"
                    android:gravity="center"
                    android:padding="5sp">

                    <Button
                        android:id="@+id/admin_upload_file"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/upload_file"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginTop="2sp">

                <RelativeLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/uploadsBG"
                    android:gravity="center"
                    android:padding="5sp">

                    <Button
                        android:id="@+id/admin_get_client_ids"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/get_user_ids"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/idBG"
                    android:gravity="center"
                    android:padding="5sp">

                    <Button
                        android:id="@+id/admin_get_file"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/get_files"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>