<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChangePasswordActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="20sp"
        app:cardCornerRadius="10sp"
        app:cardElevation="3sp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/circle"
                    android:padding="8sp"
                    android:src="@mipmap/password"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10sp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/colorPrimary"
                    android:padding="5sp"
                    android:src="@mipmap/password"
                    android:tint="@android:color/white" />

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView2"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/imageView2"
                    android:layout_toRightOf="@id/imageView2"
                    android:background="@color/editTextBackground"
                    android:hint="@string/current_password"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/colorPrimary"
                    android:padding="5sp"
                    android:src="@mipmap/password"
                    android:tint="@android:color/white" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView3"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/imageView3"
                    android:layout_toRightOf="@id/imageView3"
                    android:background="@color/editTextBackground"
                    android:hint="@string/new_password"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

            </RelativeLayout>

            <Button
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-medium"
                android:text="@string/change_password"/>


            <ProgressBar
                android:id="@+id/change_password_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_password"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>